--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="src/styles/styles.css">
 </head>
 
 <body>
+  <section class="content">
+    <h1 class="title">pokedex</h1>
+    <ol class="list-pokemons">
+      <li class="pokemon">
+        <span class="pokemon-id">#001</span>
+        <h2> Bulbasaur</h2>
+        <div class="pokemon-detail">
+          <ol class="types">
+            <li class="type">Glass</li>
+            <li class="type">Poison</li>
+          </ol>
+        </div>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
+      </li>
+  </section>
 
 
   <script src="src/scripts/main.js"></script>
