Started API data manipulation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <section class="content">
     <h1 class="title">pokedex</h1>
-    <ol class="list-pokemons">
+    <ol class="list-pokemons"  id="pokemonList">
       <li class="pokemon">
         <span class="pokemon-id">#001</span>
         <h2> Bulbasaur</h2>
