Converted PokeAPI model to a custom model

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </section>
 
 
+  <script src="src/scripts/pokemon-model.js"></script>
   <script src="src/scripts/poke-api.js"></script>
   <script src="src/scripts/main.js"></script>
 </body>
