Implemented dynamic colors for Pokémon types

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <section class="content">
-    <h1 class="title">pokedex</h1>
+    <h1 class="title">Pokedex</h1>
     <ol class="list-pokemons"  id="pokemonList">
       <li class="pokemon">
         <span class="pokemon-id">#001</span>
