--- a/index.html
+++ b/index.html
@@ -14,18 +14,14 @@
 <body>
   <section class="content">
     <h1 class="title">Pokedex</h1>
-    <ol class="list-pokemons"  id="pokemonList">
-      <li class="pokemon">
-        <span class="pokemon-id">#001</span>
-        <h2> Bulbasaur</h2>
-        <div class="pokemon-detail">
-          <ol class="types">
-            <li class="type">Glass</li>
-            <li class="type">Poison</li>
-          </ol>
-        </div>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
-      </li>
+    <ol class="list-pokemons" id="pokemonList">
+    </ol>
+    <div class="pagination">
+      <button id="loadMore" type="button">
+        VEJA MAIS
+      </button>
+    </div>
+
   </section>
 
 
